--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,17 @@
             <artifactId>jsch</artifactId>
             <version>0.1.55</version>
         </dependency>
-
+       <dependency>
+        <groupId>org.codehaus.woodstox</groupId>
+        <artifactId>woodstox-core-asl</artifactId>
+        <version>4.1.4</version>
+           <exclusions>
+               <exclusion>
+                   <groupId>javax.xml.stream</groupId>
+                   <artifactId>stax-api</artifactId>
+               </exclusion>
+           </exclusions>
+    </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
