adding : GetBalance, GetTransactionFrom Hash, SafeTransfertERC721Token, TransfertERC20TOken , a NeoLoad template project, and the README

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN sh /neoload.sh -q -dir /neoload -Vsys.installationTypeId=Load Generator -Vsy
 
 FROM alpine:3.7
 
-WORDIR /neoload
+WORKDIR /neoload
 
 ENV user=neoload
 ENV group=neoload
