adding : GetBalance, GetTransactionFrom Hash, SafeTransfertERC721Token, TransfertERC20TOken , a NeoLoad template project, and the README

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ VOLUME /etc/secrets
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
-RUN sh chown /neoload/wb
+RUN sh chown neoload:neoload /neoload/wb
 RUN sh chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
 
