--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,8 +19,8 @@ VOLUME /etc/secrets
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
-RUN sh chown neoload:neoload /neoload/wb
-RUN sh chmod 755 /neoload/wb
+RUN chown neoload:neoload /neoload/wb
+RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
 
 EXPOSE 7100
