adding : GetBalance, GetTransactionFrom Hash, SafeTransfertERC721Token, TransfertERC20TOken , a NeoLoad template project, and the README

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,12 +9,13 @@ WORKDIR /neoload
 
 RUN ls -l
 
-ENV user=root
-ENV group=root
+ENV user=neoload
+ENV group=0
 VOLUME /etc/secrets
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
+RUN chown neoload:0 /neoload/wb
 
 RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
