--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,11 +12,11 @@ RUN ls -l
 ENV user=neoload
 ENV group=0
 VOLUME /etc/secrets
+USER neoload
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
-RUN chown neoload:0 /neoload/wb
-
+RUN ls -l
 RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
 
