adding : GetBalance, GetTransactionFrom Hash, SafeTransfertERC721Token, TransfertERC20TOken , a NeoLoad template project, and the README

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,7 @@ USER neoload
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
 RUN ls -l
+RUN chown neoload /neoload/wb
 RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
 
