--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,7 @@
 
 
-
-
 ARG BUILD_NL_VERSION=VERSION_TO_REPLACE
+
 FROM  neotys/neoload-loadgenerator:$BUILD_NL_VERSION
 
 WORKDIR /neoload
@@ -12,7 +11,7 @@ RUN ls -l
 ENV user=neoload
 ENV group=0
 VOLUME /etc/secrets
-USER neoload
+USER root
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
@@ -20,5 +19,6 @@ RUN ls -l
 RUN chown neoload /neoload/wb
 RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
+USER neoload
 
 
