--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ USER root
 
 ADD https://storage.cloud.google.com/genesis-public/cli/qa/bin/linux/amd64/whiteblock wb
 
-RUN ls -l
+RUN ls -l /neoload
 RUN chown neoload /neoload/wb
 RUN chmod 755 /neoload/wb
 RUN export PATH=$PATH:/neoload/wb
