--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,18 @@
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.google.api.client/google-api-client-json-rpc2 -->
 
-
-
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.3.1</version>
             <!-- already in NeoLoad: can cause conflicts -->
             <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.12</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
