code cleanup, still trying to flush out root cause of missing method

--- a/NeoLoad Template Project/results/result_ba5e9f0c-7a1b-41b4-8a29-94beb710f0a9/additionalbenchinfo.properties
+++ b/NeoLoad Template Project/results/result_ba5e9f0c-7a1b-41b4-8a29-94beb710f0a9/additionalbenchinfo.properties
@@ -1,15 +1,15 @@
 #
 #Mon May 13 17:47:15 CEST 2019
-[graphGranularity]
+[graphGranularity]=
 label=Standard
 
-[neoloadVersion]
+[neoloadVersion]=
 label=
 buildId=20190307-5
 fixVersion=6.9.0
 fullVersion=6.9.0;build\=20190307-5
 
-[runtimeMiscParameters]
+[runtimeMiscParameters]=
 response.cache.optimized=false
 max.dynamic.redirects.count=10
 disable.cache.for.extractors=true
@@ -44,7 +44,7 @@ http.client.use.legacy=false
 OracleForms.content.type.http.header.regexp=application/octet-stream
 scheme.priority=negotiate,ntlm,digest,basic
 
-[runtimeParameters]
+[runtimeParameters]=
 gwt.client.server.mode=false
 jetty.thread.pool.max.thread=20000
 store.containers.in.rawresults=false
