--- a/NeoLoad Template Project/custom-resources/simple-geth/geth_ethstats.yaml
+++ b/NeoLoad Template Project/custom-resources/simple-geth/geth_ethstats.yaml
@@ -25,32 +25,10 @@ services:
       cpus: 1
       memory: 1 GiB
       storage: 10 GiB
-#sidecars:
-#  - name: ethlogger
-#    sidecar-to:
-#      - geth
-#    image: gcr.io/whiteblock/splunk:latest
-#    resources:
-#      cpus: 2
-#      memory: 4 GB
-#      storage: 30 GiB
-#    script:
-#      inline:
-#        ethlogger --eth-rpc-url=http://$SERVICE:8545
-#    environment:
-#      NETWORK_NAME: whiteblock
-#      START_AT_BLOCK: latest
-#      SPLUNK_HEC_URL: "https://35.224.188.142:8088"
-#      SPLUNK_HEC_TOKEN: "d1b8059a-3b66-4fa4-9a72-4d75b009caaa"
-#      SPLUNK_EVENTS_INDEX: main
-#      SPLUNK_METRICS_INDEX: metrics
-#      SPLUNK_INTERNAL_INDEX: metrics
-#      SPLUNK_HEC_REJECT_INVALID_CERTS: "false"
 tests: 
   - name: geth_network_2_nodes 
     phases:
       - name: start
-        duration: infinite
         system: 
         - type: geth
           count: 2
@@ -60,6 +38,7 @@ tests:
             networks: 
               - name: common-network
         - type: record
+          duration: 3h
           count: 1
           port-mappings:
             - "8080:8080"
